--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   fertilizer-prediction-api:
-    build: ./app/
+    build: ./
     ports:
       - 8000:8000
     environment:
